# A_Cpp

./: .gitignore  Alloc.h  AllocInterface.h  CMakeLists.txt  Deque.h  main.cpp
calc/: Calc.cpp  Calc.h
docs/: classArithmetic.html  classCalc.html  classEngine.html  classEvaluator.html  classOperation.html  classToken.html  classTokenizer.html  classTrigonometry.html  classWrapper.html  classes.html
docs/html/: classAlloc.html  classBaseAlloc.html  classDeque.html  classDeque_1_1iterator.html  classes.html
engine/: Engine.h
evaluator/: Evaluator.cpp  Evaluator.h
libs/: CMakeLists.txt
libs/include/: lib_header.h
libs/src/: fact.cpp  sin.cpp
operation/: Operation.cpp  Operation.h
toWrap/: toWrap.h
tokenizer/: Tokenizer.cpp  Tokenizer.h
tokens/: Token.cpp  Token.h
wrapper/: Wrapper.h
